part1/1_7/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-kub-main-app-svc
spec:
  type: ClusterIP
  selector:
    app: dev-kub-main-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
