part1/1_7/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-kub-main-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: dev-kub-main-app-svc
          servicePort: 2345
